<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/alphaBTN"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="250dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="launchAlpha"
        android:text="@string/Alpha"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/repoBTN"
        android:layout_width="163dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_dark"
        android:linksClickable="true"
        android:onClick="launchRepo"
        android:text="@string/Repo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizBTN" />

    <Button
        android:id="@+id/quizBTN"
        android:layout_width="160dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="launchQuiz"
        android:text="@string/Quiz"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alphaBTN" />

    <Button
        android:id="@+id/button"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:background="@android:color/holo_purple"
        android:onClick="launchList"
        android:text="@string/list"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>